Imcoming version
  - Added max map size to manpage

version 1.1.4 2013-07-17
  - improved man page, automated version number substitution

version 1.1.3 2013-07-16
  - added a manpage

version 1.1.2 2013-07-15
  - bugfix

version 1.1.1 2013-07-14
  - AIO is replaced with simple non-blocking input (for portability).
  - fixed possible segmentation faults when starting a server (error in map generation)
  - optimization -O2 by default