@@ -1,4 +1,5 @@
 Imcoming version
+  - Quit confirmation dialog for singleplayer and multiplayer client.
   - Added max map size to manpage
 
 version 1.1.4 2013-07-17
